WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274560
[Navigation] Fix using wrong navigation type in certain cases
https://bugs.webkit.org/show_bug.cgi?id=274560
Summary
[Navigation] Fix using wrong navigation type in certain cases
Patrick Griffis
Reported
2024-05-22 17:17:49 PDT
""
Attachments
Add attachment
proposed patch, testcase, etc.
Patrick Griffis
Comment 1
2024-05-22 17:18:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28957
EWS
Comment 2
2024-05-23 13:21:01 PDT
Committed
279230@main
(f64d31c61cfe): <
https://commits.webkit.org/279230@main
> Reviewed commits have been landed. Closing PR #28957 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-05-23 13:22:28 PDT
<
rdar://problem/128633363
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug