[Navigation] Fix using wrong navigation type in certain cases https://bugs.webkit.org/show_bug.cgi?id=274560

Reviewed by Alex Christensen.

Explicitly pass the type instead of relying on m_loadType.

* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigate-event/navigate-destination-getState-reload-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigate-event/navigate-meta-refresh-expected.txt:
* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::loadURL):
(WebCore::FrameLoader::loadWithDocumentLoader):
(WebCore::FrameLoader::dispatchNavigateEvent):
* Source/WebCore/loader/FrameLoader.h:

Canonical link: https://commits.webkit.org/279230@main